--- a/XGame/XSrc/XPatcher/XFPKPacker/xfpkpacker.ui
+++ b/XGame/XSrc/XPatcher/XFPKPacker/xfpkpacker.ui
@@ -17,18 +17,25 @@
    <widget class="QTreeView" name="treeView">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>60</y>
-      <width>256</width>
-      <height>192</height>
+      <x>20</x>
+      <y>10</y>
+      <width>531</width>
+      <height>291</height>
      </rect>
     </property>
-    <property name="editTriggers">
-     <set>QAbstractItemView::NoEditTriggers</set>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>310</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
     </property>
-    <attribute name="headerHighlightSections">
-     <bool>false</bool>
-    </attribute>
+    <property name="text">
+     <string>生成包</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -40,6 +47,12 @@
      <height>23</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>打开</string>
+    </property>
+   </widget>
+   <addaction name="menu"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
